--- a/html/game.html
+++ b/html/game.html
@@ -14,7 +14,7 @@
             <div id="hud">
                 <div class="hud-item">
                     <div class="hud-item">
-                        <h3>Seconds <span id="time-left">75</span>></h3>
+                        <h3 class="hud-prefix" id="time-left"></h3>
                         <p class="hud-prefix">
                             Score
                         </p>
