--- a/html/end.html
+++ b/html/end.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div id="end" class="flex-center flex-column">
+        <div id="end" class="centered column">
             <h1 id="finalScore">0</h1>
-            <form class="end-form-container">
+            <form class="end-box">
                 <h2 id="end-text">Enter Your Name Below to Save Your Score!</h2>
                 <input type="text" name="name" id="username" placeholder="Enter your name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
