--- a/html/game.html
+++ b/html/game.html
@@ -10,35 +10,35 @@
 </head>
 <body>
     <div class="container">
-        <div id="game" class="justify-center flex-column">
+        <div id="game" class="centered column">
             <div id="hud">
                 <div class="hud-item">
                     <div class="hud-item">
-                        <h3 class="hud-prefix" id="time-left"></h3>
-                        <p class="hud-prefix">
+                        <h3 class="score-top" id="time-left"></h3>
+                        <p class="score-top">
                             Score
                         </p>
-                        <h1 class="hud-main-text" id="score">
+                        <h1 class="score-text" id="score">
                             0
                         </h1>
                     </div>
                 </div>
                 <h1 id="question">What is the answer to this question?</h1>
-                <div class="choice-container">
-                    <p class="choice-prefix">A</p>
-                    <p class="choice-text" data-number="1">Choice</p>
+                <div class="choice-box">
+                    <p class="choice-letter">A</p>
+                    <p class="choice-answer" data-number="1">Choice</p>
                 </div>
-                <div class="choice-container">
-                    <p class="choice-prefix">B</p>
-                    <p class="choice-text" data-number="2">Choice</p>
+                <div class="choice-box">
+                    <p class="choice-letter">B</p>
+                    <p class="choice-answer" data-number="2">Choice</p>
                 </div>
-                <div class="choice-container">
-                    <p class="choice-prefix">C</p>
-                    <p class="choice-text" data-number="3">Choice</p>
+                <div class="choice-box">
+                    <p class="choice-letter">C</p>
+                    <p class="choice-answer" data-number="3">Choice</p>
                 </div>
-                <div class="choice-container">
-                    <p class="choice-prefix">D</p>
-                    <p class="choice-text" data-number="4">Choice</p>
+                <div class="choice-box">
+                    <p class="choice-letter">D</p>
+                    <p class="choice-answer" data-number="4">Choice</p>
                 </div>
             </div>
         </div>
