--- a/html/highscores.html
+++ b/html/highscores.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/highscores.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div id="highScores" class="flex-center flex-column">
+        <div id="highScores" class="centered column">
             <h1 id="finalScore">Leaderboard</h1>
             <ul id="highScoresList"></ul>
             <a href="../" class="btn">Go Home 🏠</a>
