--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="home" class="flex-column flex-center">
+        <div id="home" class="column centered">
             <h1>Are you ready?</h1>
             <a href="./html/game.html" class="btn">Play</a>
             <a href="./html/highscores.html" id="highscore-btn" class="btn">High Scores 👑</a>
