--- a/html/game.html
+++ b/html/game.html
@@ -25,19 +25,19 @@
                 </div>
                 <h1 id="question">What is the answer to this question?</h1>
                 <div class="choice-box">
-                    <p class="choice-letter">A</p>
+                    <p class="choice-letter">A)</p>
                     <p class="choice-answer" data-number="1">Choice</p>
                 </div>
                 <div class="choice-box">
-                    <p class="choice-letter">B</p>
+                    <p class="choice-letter">B)</p>
                     <p class="choice-answer" data-number="2">Choice</p>
                 </div>
                 <div class="choice-box">
-                    <p class="choice-letter">C</p>
+                    <p class="choice-letter">C)</p>
                     <p class="choice-answer" data-number="3">Choice</p>
                 </div>
                 <div class="choice-box">
-                    <p class="choice-letter">D</p>
+                    <p class="choice-letter">D)</p>
                     <p class="choice-answer" data-number="4">Choice</p>
                 </div>
             </div>
