connected timer and wrong answers

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div id="home" class="column centered">
             <h1>Are you ready?</h1>
+            <h1>For the LOTR Quiz!</h1>
             <a href="./html/game.html" class="btn">Play</a>
             <a href="./html/highscores.html" id="highscore-btn" class="btn">High Scores 👑</a>
         </div>
