--- a/html/highscores.html
+++ b/html/highscores.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="highScores" class="centered column">
-            <h1 id="finalScore">Leaderboard</h1>
+            <h1 id="finalScore">High Scores:</h1>
             <ul id="highScoresList"></ul>
             <a href="../" class="btn">Go Home 🏠</a>
         </div>
